logs/gnotifier.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GNotifier-0.5.egg-info'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/gunicorn'...
Listing './lib/python3.5/site-packages/gunicorn/app'...
Listing './lib/python3.5/site-packages/gunicorn/http'...
Listing './lib/python3.5/site-packages/gunicorn/instrument'...
Listing './lib/python3.5/site-packages/gunicorn/workers'...
Listing './lib/python3.5/site-packages/gunicorn-19.7.1.dist-info'...
Listing './lib/python3.5/site-packages/http_parser'...
Listing './lib/python3.5/site-packages/http_parser-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/notifier'...
Compiling './lib/python3.5/site-packages/notifier/__init__.py'...
***   File "./lib/python3.5/site-packages/notifier/__init__.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/server.py'...
***   File "./lib/python3.5/site-packages/notifier/server.py", line 26
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/notifier/xmpp'...
Compiling './lib/python3.5/site-packages/notifier/xmpp/auth.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/auth.py", line 157
    if challenge.getNamespace()<>NS_SASL: return
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/browser.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/browser.py", line 115
    if i<>'' and cur.has_key(i): cur=cur[i]
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/client.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/client.py", line 105
    if debug and type(debug)<>list: debug=['always', 'nodebuilder']
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/commands.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/commands.py", line 140
    raise NameError,'Command Exists'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/debug.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/debug.py", line 180
    print 'ERROR: can open %s for writing'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/notifier/xmpp/dispatcher.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/dispatcher.py", line 103
    if ns<>NS_STREAMS or tag<>'stream':
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/features.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/features.py", line 102
    if type(i)<>type(iq): pass
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/filetransfer.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/filetransfer.py", line 150
    elif seq<>stream['seq']: err=ERR_UNEXPECTED_REQUEST
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/jep0106.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/jep0106.py", line 43
    print 'PASS Before: ' + before
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/notifier/xmpp/protocol.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/protocol.py", line 384
    if tag.getName()<>'text': return tag.getName()
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/session.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/session.py", line 88
    if self.TYP=='server': self.ID=`random.random()`[2:]
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/simplexml.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/simplexml.py", line 386
    self.DEBUG(DBG_NODEBUILDER, "DEPTH -> %i , tag -> %s, attrs -> %s" % (self.__depth, tag, `attrs`), 'down')
                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifier/xmpp/transports.py'...
***   File "./lib/python3.5/site-packages/notifier/xmpp/transports.py", line 136
    self.DEBUG("Successfully connected to remote host %s"%`server`,'start')
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/restkit'...
Compiling './lib/python3.5/site-packages/restkit/client.py'...
***   File "./lib/python3.5/site-packages/restkit/client.py", line 346
    except socket.gaierror, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit/contrib'...
Compiling './lib/python3.5/site-packages/restkit/contrib/console.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/console.py", line 189
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/contrib/ipython_shell.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/ipython_shell.py", line 50
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/restkit/datastructures.py'...
***   File "./lib/python3.5/site-packages/restkit/datastructures.py", line 162
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/errors.py'...
***   File "./lib/python3.5/site-packages/restkit/errors.py", line 32
    except (NameError, ValueError, KeyError), e:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/oauth2.py'...
***   File "./lib/python3.5/site-packages/restkit/oauth2.py", line 84
    except UnicodeDecodeError, le:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit-4.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/socketpool'...
Listing './lib/python3.5/site-packages/socketpool-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './restkit'...
Listing './share'...
Listing './share/python-wheels'...
Listing './socketpool'...
